--- a/pag/index.html
+++ b/pag/index.html
@@ -15,7 +15,15 @@
     <h1>Qualidade de Vida Escolar</h1>
     <nav>
       <a href="#sobre">Sobre Nós</a>
-      <a href="#atividades">Atividades</a>
+      <div class="dropdown">
+        <a href="#atividades" class="dropdown-toggle">Atividades</a>
+        <ul class="dropdown-menu">
+          <li><a href="#aluno">Cadastro de Aluno</a></li>
+          <li><a href="#ocorrencias">Ocorrências</a></li>
+          <li><a href="#relatorios">Relatórios</a></li>
+          <li><a href="#acompanhamento">Acompanhamento</a></li>
+        </ul>
+      </div>
       <a href="#contato">Contato</a>
     </nav>
   </header>
@@ -31,6 +39,26 @@
       <ul id="lista-atividades"></ul>
     </section>
 
+    <section class="section" id="cadastro-aluno">
+      <h2>Cadastro de Aluno</h2>
+      <p>Formulário para cadastro de novos alunos no sistema do departamento.</p>
+    </section>
+
+    <section class="section" id="ocorrencias">
+      <h2>Ocorrências</h2>
+      <p>Registro e acompanhamento de ocorrências envolvendo alunos.</p>
+    </section>
+
+    <section class="section" id="relatorios">
+      <h2>Relatórios</h2>
+      <p>Visualização e geração de relatórios sobre atividades e ocorrências.</p>
+    </section>
+
+    <section class="section" id="acompanhamento">
+      <h2>Acompanhamento</h2>
+      <p>Monitoramento do progresso e bem-estar dos alunos.</p>
+    </section>
+
     <section class="section" id="contato">
       <h2>Contato</h2>
       <p>Email: qualidadevida@senai.edu.br</p>
@@ -39,7 +67,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Departamento de Qualidade de Vida SENAI Antônio A. Lobbe- Todos os direitos reservados.</p>
+    <p>&copy; 2024 Departamento de Qualidade de Vida - Todos os direitos reservados.</p>
   </footer>
 
   <script src="main.js"></script>
