--- a/pag/index.html
+++ b/pag/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>Qualidade de Vida Escolar</h1>
+    <h1>Setor de apoio Senai</h1>
     <nav>
       <a href="#sobre">Sobre Nós</a>
       <div class="dropdown">
@@ -30,7 +30,7 @@
   <main class="container">
     <section class="section" id="sobre">
       <h2>Sobre o Departamento</h2>
-      <p>Nosso objetivo é promover o bem-estar físico, emocional e social de todos os membros da comunidade escolar, oferecendo suporte e atividades que melhorem a qualidade de vida.</p>
+      <p></p>
     </section>
 
     <section class="section" id="atividades">
@@ -40,22 +40,22 @@
 
     <section class="section" id="cadastro-aluno">
       <h2>Cadastro de Aluno</h2>
-      <p>Formulário para cadastro de novos alunos no sistema do departamento.</p>
+      <p></p>
     </section>
 
     <section class="section" id="ocorrencias">
       <h2>Ocorrências</h2>
-      <p>Registro e acompanhamento de ocorrências envolvendo alunos.</p>
+      <p></p>
     </section>
 
     <section class="section" id="relatorios">
       <h2>Relatórios</h2>
-      <p>Visualização e geração de relatórios sobre atividades e ocorrências.</p>
+      <p></p>
     </section>
 
     <section class="section" id="acompanhamento">
       <h2>Acompanhamento</h2>
-      <p>Monitoramento do progresso e bem-estar dos alunos.</p>
+      <p></p>
     </section>
 
     <section class="section" id="contato">
