estilização e adicionado funções na parte de cadastro

--- a/escola-qualidade-vida/frontend/public/pages/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/pages/cadastroAluno.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Css/cadastroAluno.css">
     <title>cadastro de Aluno</title>
 </head>
 <body>
@@ -38,21 +39,58 @@
             <input type="checkbox" id="menorIdade" name="menorIdade">Sim<br>
             <input type="checkbox" id="maiorIdade" name="maiorIdade">Não<br>
 
+            <div id="responsavelFields" style="display: none; margin-top: 20px;">
+            <h3>Dados do Responsável</h3>
+            <label for="respNome">Nome do responsável:</label><br>
+            <input type="text" id="respNome" name="respNome"><br>
+
+            <label for="respSobrenome">Sobrenome:</label><br>
+            <input type="text" id="respSobrenome" name="respSobrenome"><br>
+
+            <label for="respParentesco">Grau de Parentesco:</label><br>
+            <input type="text" id="respParentesco" name="respParentesco"><br>
+
+            <label for="respCidade">Cidade:</label><br>
+            <input type="text" id="respCidade" name="respCidade"><br>
+
+            <label for="respBairro">Bairro:</label><br>
+            <input type="text" id="respBairro" name="respBairro"><br>
+
+            <label for="respRua">Rua:</label><br>
+            <input type="text" id="respRua" name="respRua"><br>
+        </div>
+
             <label for="fname">É empregado?</label><br>
             <input type="checkbox" id="empregado" name="empregado">Sim<br>
             <input type="checkbox" id="desempregado" name="desempregado">Não<br>
-            <label for="fname">Se sim qual empresa?</label><br>
-            <input type="text" id="empresa" name="empresa"><br>
+
+            <div id="empresaFields" style="display: none; margin-top: 20px;">
+                <label for="fname">Se sim qual empresa?</label><br>
+                <input type="text" id="empresa" name="empresa"><br>
+            </div>
+            
 
             <label for="fname">O aluno possui alguma comorbidade?</label><br>
             <input type="checkbox" id="temcomorbidade" name="temcomorbidade">Sim<br>
             <input type="checkbox" id="naotemcomorbidade" name="naotemcomorbidade">Não<br>
-            <label for="fname">Se sim qual?</label><br>
-            <input type="text" id="comorbidade" name="comorbidade"><br>
+
+            <div id="comorbidadeFields" style="display: none; margin-top: 20px;">
+                <label for="fname">Se sim qual?</label><br>
+                <input type="text" id="comorbidade" name="comorbidade"><br>
+            </div>
+            
 
             <label for="fname">Escolha a foto do aluno</label><br>
             <input type="file" name="arquivos">
         </form>
     </main>
+    <footer>
+        <p>
+            &copy; 2024 Departamento de Qualidade de Vida - Todos os direitos
+          reservados.
+        </p>
+    </footer>
+
+    <script src="../script.js"></script>
 </body>
 </html>
