--- a/escola-qualidade-vida/frontend/public/pages/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/pages/cadastroAluno.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Css/cadastroAluno.css">
     <title>cadastro de Aluno</title>
 </head>
+
 <body>
     <header>
         <h1>Qualidade de Vida Escolar</h1>
@@ -35,30 +37,28 @@
             <label for="fname">Rua:</label><br>
             <input type="text" id="rua" name="rua"><br>
 
-            <label for="fname">É de menor?</label><br>
-            <input type="checkbox" id="menorIdade" name="menorIdade">Sim<br>
-            <input type="checkbox" id="maiorIdade" name="maiorIdade">Não<br>
+            <label for="fname">Idade:</label>
+            <input type="number" id="idade" placeholder="Digite a idade do aluno" />
+            <div id="responsavelFields" style="display: none;">
+                <!-- Campos do responsável -->
+                <label for="nomeResponsavel">Nome do Responsável:</label>
+                <input type="text" id="nomeResponsavel" />
 
-            <div id="responsavelFields" style="display: none; margin-top: 20px;">
-            <h3>Dados do Responsável</h3>
-            <label for="respNome">Nome do responsável:</label><br>
-            <input type="text" id="respNome" name="respNome"><br>
+                <label for="respSobrenome">Sobrenome:</label><br>
+                <input type="text" id="respSobrenome" name="respSobrenome"><br>
 
-            <label for="respSobrenome">Sobrenome:</label><br>
-            <input type="text" id="respSobrenome" name="respSobrenome"><br>
+                <label for="respParentesco">Grau de Parentesco:</label><br>
+                <input type="text" id="respParentesco" name="respParentesco"><br>
 
-            <label for="respParentesco">Grau de Parentesco:</label><br>
-            <input type="text" id="respParentesco" name="respParentesco"><br>
+                <label for="respCidade">Cidade:</label><br>
+                <input type="text" id="respCidade" name="respCidade"><br>
 
-            <label for="respCidade">Cidade:</label><br>
-            <input type="text" id="respCidade" name="respCidade"><br>
+                <label for="respBairro">Bairro:</label><br>
+                <input type="text" id="respBairro" name="respBairro"><br>
 
-            <label for="respBairro">Bairro:</label><br>
-            <input type="text" id="respBairro" name="respBairro"><br>
-
-            <label for="respRua">Rua:</label><br>
-            <input type="text" id="respRua" name="respRua"><br>
-        </div>
+                <label for="respRua">Rua:</label><br>
+                <input type="text" id="respRua" name="respRua"><br>
+            </div>
 
             <label for="fname">É empregado?</label><br>
             <input type="checkbox" id="empregado" name="empregado">Sim<br>
@@ -68,7 +68,7 @@
                 <label for="fname">Se sim qual empresa?</label><br>
                 <input type="text" id="empresa" name="empresa"><br>
             </div>
-            
+
 
             <label for="fname">O aluno possui alguma comorbidade?</label><br>
             <input type="checkbox" id="temcomorbidade" name="temcomorbidade">Sim<br>
@@ -78,7 +78,9 @@
                 <label for="fname">Se sim qual?</label><br>
                 <input type="text" id="comorbidade" name="comorbidade"><br>
             </div>
-            
+
+            <label for="fname">Curso Matriculado</label><br>
+            <input type="text" id="curso" name="curso"><br>
 
             <label for="fname">Escolha a foto do aluno</label><br>
             <input type="file" name="arquivos">
@@ -87,10 +89,11 @@
     <footer>
         <p>
             &copy; 2024 Departamento de Qualidade de Vida - Todos os direitos
-          reservados.
+            reservados.
         </p>
     </footer>
 
     <script src="../script.js"></script>
 </body>
+
 </html>
