--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -1,53 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login do Aluno</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Início - Qualidade de Vida Escolar</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
         <h1>Qualidade de Vida Escolar</h1>
-      </header>
-  
-      <main class="container">
-  
-        <a class="a" id="cadastro-aluno" href="./pages/cadastroAluno.html">
+    </header>
+    <main class="container">
+        <a class="a" href="/pages/cadastroAluno.html">
           <h2>Cadastro de Aluno</h2>
-          <p>
-            Formulário para cadastro de novos alunos no sistema do departamento.
-          </p>
+          <p>Formulário para cadastro de novos alunos no sistema do departamento.</p>
         </a>
-  
-        <a class="a" id="ocorrencias" href="./pages/ocorrencias.html">
+        <a class="a" href="/pages/ocorrencias.html">
           <h2>Ocorrências</h2>
           <p>Registro e acompanhamento de ocorrências envolvendo alunos.</p>
         </a>
-  
-        <a class="a" id="relatorios" href="./pages/relatorios.html">
+        <a class="a" href="/pages/relatorios.html">
           <h2>Relatórios</h2>
-          <p>
-            Visualização e geração de relatórios sobre atividades e ocorrências.
-          </p>
+          <p>Visualização e geração de relatórios sobre atividades e ocorrências.</p>
         </a>
-  
-        <a class="a" id="acompanhamento" href="./pages/acompanhamento.html">
+        <a class="a" href="/pages/acompanhamento.html">
           <h2>Acompanhamento</h2>
           <p>Monitoramento do progresso e bem-estar dos alunos.</p>
         </a>
-      </main>
-  
-      <footer>
-        <p>
-          &copy; 2024 Departamento de Qualidade de Vida - Todos os direitos
-          reservados.
-          <h2>Contato</h2>
-          <p>Email: qualidadevida@senai.edu.br</p>
-          <p>Telefone: (11) 1234-5678</p>
-        </p>
-      </footer>
-      
-<script src="script.js"></script>
+    </main>
+    <footer>
+        <p>&copy; 2024 Departamento de Qualidade de Vida - Todos os direitos reservados.</p>
+    </footer>
+    <script src="/js/script.js"></script>
 </body>
 </html>
