--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -35,37 +35,36 @@
             <label for="fname">Rua:</label><br>
             <input type="text" id="rua" name="rua"><br>
 
-            <label for="fname">É de menor?</label><br>
-            <input type="checkbox" id="menorIdade" name="menorIdade">Sim<br>
-            <input type="checkbox" id="maiorIdade" name="maiorIdade">Não<br>
 
+            <label for="fname">Idade:</label><br>
+            <input type="number" id="idade" placeholder="Digite sua idade" />
             <div id="responsavelFields" style="display: none; margin-top: 20px;">
-            <h3>Dados do Responsável</h3>
-            <label for="respNome">Nome do responsável:</label><br>
-            <input type="text" id="respNome" name="respNome"><br>
+                <!-- Campos do responsável -->
+                <label for="nomeResponsavel">Nome do Responsável:</label>
+                <input type="text" id="nomeResponsavel" />
 
-            <label for="respSobrenome">Sobrenome:</label><br>
-            <input type="text" id="respSobrenome" name="respSobrenome"><br>
+                <label for="respSobrenome">Sobrenome:</label><br>
+                <input type="text" id="respSobrenome" name="respSobrenome"><br>
 
-            <label for="respParentesco">Grau de Parentesco:</label><br>
-            <input type="text" id="respParentesco" name="respParentesco"><br>
+                <label for="respParentesco">Grau de Parentesco:</label><br>
+                <input type="text" id="respParentesco" name="respParentesco"><br>
 
-            <label for="respCidade">Cidade:</label><br>
-            <input type="text" id="respCidade" name="respCidade"><br>
+                <label for="respCidade">Cidade:</label><br>
+                <input type="text" id="respCidade" name="respCidade"><br>
 
-            <label for="respBairro">Bairro:</label><br>
-            <input type="text" id="respBairro" name="respBairro"><br>
+                <label for="respBairro">Bairro:</label><br>
+                <input type="text" id="respBairro" name="respBairro"><br>
 
-            <label for="respRua">Rua:</label><br>
-            <input type="text" id="respRua" name="respRua"><br>
-        </div>
+                <label for="respRua">Rua:</label><br>
+                <input type="text" id="respRua" name="respRua"><br>
+            </div>
 
             <label for="fname">É empregado?</label><br>
             <input type="checkbox" id="empregado" name="empregado">Sim<br>
             <input type="checkbox" id="desempregado" name="desempregado">Não<br>
 
             <div id="empresaFields" style="display: none; margin-top: 20px;">
-                <label for="fname">Se sim qual empresa?</label><br>
+                <label for="fname">Qual empresa?</label><br>
                 <input type="text" id="empresa" name="empresa"><br>
             </div>
             
@@ -75,7 +74,7 @@
             <input type="checkbox" id="naotemcomorbidade" name="naotemcomorbidade">Não<br>
 
             <div id="comorbidadeFields" style="display: none; margin-top: 20px;">
-                <label for="fname">Se sim qual?</label><br>
+                <label for="fname">Qual?</label><br>
                 <input type="text" id="comorbidade" name="comorbidade"><br>
             </div>
             
@@ -91,6 +90,6 @@
         </p>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
