--- a/escola-qualidade-vida/frontend/public/acompanhamento.html
+++ b/escola-qualidade-vida/frontend/public/acompanhamento.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="./principal.html">Home</a></li>
-                <li><a href="./ocorrencias.html">Ocorrências</a></li>
+                <li><a href="./cadastroAluno.html">Cadastro de Aluno</a></li>
                 <li><a href="./relatorios.html">Relatórios</a></li>
-                <li><a href="./cadastroAluno.html">cadastro de Aluno</a></li>
+                <li><a href="./acompanhamento.html">Acompanhamento</a></li>
             </ul>
         </nav>
     </header>
