--- a/escola-qualidade-vida/frontend/public/index.html
+++ b/escola-qualidade-vida/frontend/public/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
+
+    <div><img src="img/senai-logo.png" alt="Logo Qualidade de Vida" class="logo"></div>
+
     <div class="login-container">
         <div class="login-header">
-            <img src="img/senai-logo.png" alt="Logo Qualidade de Vida" class="logo">
             <h1>Acesso Restrito</h1>
             <p>Área exclusiva para profissionais</p>
         </div>
@@ -40,6 +42,6 @@
         </div>
     </div>
 
-    <script src="auth.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
