atualização do login

--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <form id="cadastroAlunoForm">
+        <form id="cadastroAlunoForm" method="POST" action="/cadastro/aluno" enctype="multipart/form-data">
             <label for="name">Nome:</label><br>
             <input type="text" id="name" name="name" required><br>
 
