--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <form id="cadastroAlunoForm" method="POST" action="/cadastro/aluno" enctype="multipart/form-data">
+        <form id="cadastroAlunoForm" method="POST" enctype="multipart/form-data">
             <label for="name">Nome:</label><br>
             <input type="text" id="name" name="name" required><br>
 
@@ -39,6 +39,7 @@
             <label for="idade">Idade:</label><br>
             <input type="number" id="idade" name="idade" placeholder="Digite sua idade" required><br>
 
+            <!-- Responsável - será mostrado se a idade for menor que 18 -->
             <div id="responsavelFields" style="display: none; margin-top: 20px;">
                 <label for="nomeResponsavel">Nome do Responsável:</label>
                 <input type="text" id="nomeResponsavel" name="nomeResponsavel">
@@ -59,10 +60,12 @@
                 <input type="text" id="respRua" name="respRua"><br>
             </div>
 
+            <!-- Emprego - será mostrado se o aluno estiver empregado -->
             <label for="empregado">É empregado?</label><br>
             <input type="checkbox" id="empregado" name="empregado">Sim<br>
             <input type="checkbox" id="desempregado" name="desempregado">Não<br>
 
+            <!-- Empresa - será mostrado se o aluno estiver empregado -->
             <div id="empresaFields" style="display: none; margin-top: 20px;">
                 <label for="empresa">Qual empresa?</label><br>
                 <input type="text" id="empresa" name="empresa"><br>
@@ -72,6 +75,7 @@
             <input type="checkbox" id="temcomorbidade" name="temcomorbidade">Sim<br>
             <input type="checkbox" id="naotemcomorbidade" name="naotemcomorbidade">Não<br>
 
+            <!-- Comorbidade -->
             <div id="comorbidadeFields" style="display: none; margin-top: 20px;">
                 <label for="comorbidade">Qual?</label><br>
                 <input type="text" id="comorbidade" name="comorbidade"><br>
@@ -90,6 +94,6 @@
         </p>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/cadastroAluno.js"></script>
 </body>
 </html>
