--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -41,7 +41,9 @@
 
     <main>
         <h2>Cadastro de Aluno</h2>
-        <form action="/cadastrar-aluno" method="POST" enctype="multipart/form-data">
+   <form action="/cadastro/aluno" method="POST" enctype="multipart/form-data" id="cadastroAlunoForm">
+
+
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
 
