Atualizar o cadastroAluno.html

--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -96,7 +96,7 @@
             </div>
 
             <label for="coma_com_quem">Com quem mora:</label>
-            <input type="text" id="coma_com_quem" name="coma_com_quem">
+            <input type="text" id="mora_com_quem" name="mora_com_quem">
 
             <!-- Alterado de "Comorbidade" para "Sobre o Aluno" -->
             <label for="sobre_aluno">Sobre o Aluno:</label>
