--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -109,5 +109,6 @@
             <button type="submit">Cadastrar</button>
         </form>
     </main>
+    <script src="js/cadastroAluno.js"></script>
 </body>
 </html>
