--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -41,7 +41,8 @@
 
     <main>
         <h2>Cadastro de Aluno</h2>
-   <form action="/cadastro/aluno" method="POST" enctype="multipart/form-data" id="cadastroAlunoForm">
+   <form action="/cadastro/alunos" method="POST" enctype="multipart/form-data" id="cadastroAlunoForm">
+
 
 
             <label for="nome">Nome:</label>
