--- a/escola-qualidade-vida/frontend/public/ocorrencias.html
+++ b/escola-qualidade-vida/frontend/public/ocorrencias.html
@@ -1,57 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/ocorrencias.css">
-    <title>Relatório de Ocorrências</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cadastro de Ocorrência</title>
+  <link rel="stylesheet" href="./css/ocorrencias.css" />
 </head>
 <body>
-    <header>
-        <h1>Qualidade de Vida Escolar</h1>
-        <nav>
-            <ul>
-                <li><a href="./principal.html">Home</a></li>
-                <li><a href="./cadastroAluno.html">Cadastro de Aluno</a></li>
-                <li><a href="./relatorios.html">Relatórios</a></li>
-                <li><a href="./acompanhamento.html">Acompanhamento</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Ocorrências de Alunos</h1>
+    <nav>
+      <ul>
+        <li><a href="./principal.html">Home</a></li>
+        <li><a href="./cadastroAluno.html">Cadastrar Aluno</a></li>
+        <li><a href="./relatorios.html">Relatórios</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <div class="documento">
-            <h2>Relatório de Ocorrências do Aluno</h2>
-            
-            <div class="busca-aluno">
-                <label for="buscaAluno">Buscar Aluno:</label>
-                <input type="text" id="buscaAluno" name="buscaAluno" placeholder="Digite o nome do aluno">
-                <button id="buscarAlunoBtn">Buscar</button>
-            </div>
+  <main>
+    <h2>Cadastrar Ocorrência</h2>
 
-            <div id="dadosAluno">
-                <!-- Dados do aluno serão exibidos aqui -->
-            </div>
+    <div id="alerta" style="display: none;"></div>
 
-            <form id="cadastroOcorrenciaForm">
-                <label for="aluno_id">ID do Aluno:</label><br>
-                <input type="number" id="aluno_id" name="aluno_id" readonly><br>
+    <label for="buscar_nome">Buscar aluno por nome:</label>
+    <input type="text" id="buscar_nome" placeholder="Digite o nome..." autocomplete="off" />
+    <ul id="sugestoes" style="list-style: none; padding-left: 0;"></ul>
 
-                <label for="tipo">Tipo da Ocorrência:</label><br>
-                <input type="text" id="tipo" name="tipo" required><br>
+    <div id="aluno_selecionado" style="margin: 15px 0; display: none;">
+      <strong id="nome_exibido"></strong><br />
+      <img id="foto_exibida" src="" alt="Foto do Aluno" width="120" />
+    </div>
 
-                <label for="descricao">Descrição:</label><br>
-                <textarea id="descricao" name="descricao" required></textarea><br>
+    <form id="ocorrenciaForm">
+      <input type="hidden" id="aluno_id" name="aluno_id" required />
 
-                <label for="usuario_id">ID do Usuário:</label><br>
-                <input type="number" id="usuario_id" name="usuario_id" required><br>
+      <label for="tipo">Tipo de Ocorrência:</label>
+      <input type="text" id="tipo" name="tipo" required />
 
-                <button type="submit">Registrar Ocorrência</button>
-            </form>
-        </div>
-    </main>
+      <label for="descricao">Descrição:</label>
+      <textarea id="descricao" name="descricao" required></textarea>
 
-    <!-- Link to external JavaScript file -->
-    <script src="./js/ocorrencias.js"></script>
+      <label for="data_ocorrencia">Data da Ocorrência:</label>
+      <input type="date" id="data_ocorrencia" name="data_ocorrencia" />
+
+      <button type="submit">Cadastrar</button>
+    </form>
+  </main>
+
+  <script src="./js/ocorrencias.js"></script>
 </body>
 </html>
