atualização das paginas de casatro e relatorios

--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -102,6 +102,20 @@
 
       <label for="sobre_aluno">Sobre o Aluno:</label>
       <textarea id="sobre_aluno" name="sobre_aluno"></textarea>
+      <label for="curso">Curso:</label>
+      <select id="curso" name="curso" required>
+        <option value="">Selecione um curso</option>
+        <option value="1">Técnico em Mecânica</option>
+        <option value="2">Técnico em Eletrotécnica</option>
+        <option value="3">Técnico em Automação Industrial</option>
+        <option value="4">Técnico em Informática para Internet</option>
+        <option value="5">Técnico em Mecatrônica</option>
+        <option value="6">Técnico em Eletrônica</option>
+        <option value="7">Técnico em Logística</option>
+        <option value="8">Técnico em Administração</option>
+        <option value="9">Técnico em Desenvolvimento de Sistemas</option>
+        <option value="10">Técnico em Segurança do Trabalho</option>
+      </select>
 
       <label for="foto">Foto:</label>
       <input type="file" id="foto" name="foto" accept="image/*" />
