--- a/escola-qualidade-vida/frontend/public/relatorios.html
+++ b/escola-qualidade-vida/frontend/public/relatorios.html
@@ -3,71 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/relatorios.css">
     <title>Consulta de Alunos</title>
+    <link rel="stylesheet" href="./css/relatorios.css">
 </head>
 <body>
-    <header>
-        <h1>Qualidade de Vida Escolar</h1>
-        <nav>
-            <ul>
-                <li><a href="./principal.html">Home</a></li>
-                <li><a href="./cadastroAluno.html">Cadastro de Aluno</a></li>
-                <li><a href="./relatorios.html">Relatórios</a></li>
-                <li><a href="./acompanhamento.html">Acompanhamento</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <div class="filtro">
-            <label>
-                Matrícula:
-                <input type="text" id="filtroMatricula" placeholder="Número da Matricula">
-            </label>
+<header>
+    <h1>Qualidade de Vida Escolar</h1>
+    <nav>
+        <ul>
+            <li><a href="./principal.html">Home</a></li>
+            <li><a href="./cadastroAluno.html">Cadastro de Aluno</a></li>
+            <li><a href="./relatorios.html">Relatórios</a></li>
+            <li><a href="./acompanhamento.html">Acompanhamento</a></li>
+        </ul>
+    </nav>
+</header>
 
-            <label>
-                Nome:
-                <input type="text" id="filtroAluno" placeholder="Nome do Aluno">
-            </label>
+<main>
+    <div class="filtro">
+        <label>
+            Nome:
+            <input type="text" id="filtroAluno" placeholder="Nome do Aluno">
+        </label>
 
-            <label>
-                Curso:
-                 <input type="text" id="filtroCurso" placeholder="Curso do Aluno">
-            </label>
+        <label>
+            Curso:
+            <input type="text" id="filtroCurso" placeholder="Curso do Aluno">
+        </label>
 
-            <label>
-                Período:
-                <select id="filtroPeriodo">
-                    <option value="">Todos</option>
-                    <option value="Manhã">Manhã</option>
-                    <option value="Tarde">Tarde</option>
-                    <option value="Noite">Noite</option>
-                </select>
-            </label>
+        <button onclick="limparFiltros()">Limpar</button>
+    </div>
 
-            <button onclick="limparFiltros()">Limpar</button>
-        </div>
+    <table id="tabelaAlunos">
+        <thead>
+            <tr>
+                <th>Aluno</th>
+                <th>Curso</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Dados dos alunos -->
+        </tbody>
+    </table>
 
-        <table id="tabelaAlunos">
-            <thead>
-                <tr>
-                    <th>Aluno</th>
-                    <th>Turma</th>
-                    <th>Período</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Alunos serão renderizados aqui -->
-            </tbody>
-        </table>
+    <div id="alerta" style="display: none;"></div>
+    <div class="mensagem" id="mensagem"></div>
 
-        <div class="informacoesAluno" id="informacoesAluno" style="display:none;">
+    <!-- Modal de informações do aluno -->
+    <div class="modal" id="informacoesAluno">
+        <div class="modal-content">
+            <span class="close-button" onclick="fecharInformacoesAluno()">&times;</span>
             <h3>Informações do Aluno</h3>
             <p id="nomeAluno"></p>
             <p id="enderecoAluno"></p>
             <p id="idadeAluno"></p>
             <p id="responsavelAluno"></p>
+
             <h4>Ocorrências</h4>
             <table id="tabelaOcorrencias">
                 <thead>
@@ -78,18 +70,17 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Ocorrências do aluno serão renderizadas aqui -->
+                    <!-- Ocorrências do aluno -->
                 </tbody>
             </table>
+
             <h4>Contagem de Ocorrências por Data</h4>
             <div id="ocorrenciasPorData"></div>
         </div>
-        <div id="alerta" style="display: none;"></div>
+    </div>
+</main>
 
-
-        <div class="mensagem" id="mensagem"></div>
-    </main>
-
-    <script src="./js/consulta.js"></script>
+<script src="./js/consulta.js"></script>
 </body>
 </html>
+
