alterações de estilizações

--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -35,11 +35,13 @@
         </a>
     </main>
 
-    <!-- Botão Sair -->
-    <button id="logoutBtn" class="logout-btn">SAIR</button>
+    <div>
+        <!-- Botão Sair -->
+        <button id="logoutBtn" class="logout-btn">SAIR</button>
+    </div>
 
     <footer>
-        <p>&copy; 2024 Departamento de Qualidade de Vida - Todos os direitos reservados.</p>
+        <p>&copy; 2025 Departamento de Qualidade de Vida - Todos os direitos reservados.</p>
     </footer>
 
     <script src="js/script.js"></script>
