--- a/escola-qualidade-vida/frontend/public/index.html
+++ b/escola-qualidade-vida/frontend/public/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+    <!-- Logo do sistema -->
+    <div class="logo-container">
+        <img src="img/senai-logo.png" alt="Logo Qualidade de Vida" class="logo">
+    </div>
+
     <!-- Container principal de login -->
     <div class="login-container">
         <div class="login-header">
