--- a/escola-qualidade-vida/frontend/public/relatorios.html
+++ b/escola-qualidade-vida/frontend/public/relatorios.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="./principal.html">Home</a></li>
             <li><a href="./cadastroAluno.html">Cadastro de Aluno</a></li>
+            <li><a href="./relatorios.html">Relatórios</a></li>
             <li><a href="./acompanhamento.html">Acompanhamento</a></li>
         </ul>
     </nav>
