--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -34,6 +34,11 @@
             <h2>Acompanhamento</h2>
             <p>Monitoramento do progresso e bem-estar dos alunos.</p>
         </a>
+
+        <a class="a" id="cadastro usuario" href="./criar_usuario.html">
+            <h2>Acompanhamento</h2>
+            <p>Monitoramento do progresso e bem-estar dos alunos.</p>
+        </a>
     </main>
 
         <!-- Chatbot Container -->
