erro 404 cadastro de usuario e corrigir o cpf

--- a/escola-qualidade-vida/frontend/public/criar_usuario.html
+++ b/escola-qualidade-vida/frontend/public/criar_usuario.html
@@ -86,7 +86,7 @@
             };
 
             try {
-                const response = await fetch('/api/criar_usuario', {
+                const response = await fetch('api/criar_usuario', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
