--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -36,7 +36,7 @@
         </a>
 
         <a class="a" id="cadastro usuario" href="./criar_usuario.html">
-            <h2>Acompanhamento</h2>
+            <h2>Criar Usuario</h2>
             <p>Monitoramento do progresso e bem-estar dos alunos.</p>
         </a>
     </main>
